<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity" >

    <include
        android:id="@+id/layoutNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/navigation_menu_layout" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layoutNavigation" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/searchScreenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/searchTitle"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/searchSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchScreenTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/searchSubTitle"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <LinearLayout
                android:id="@+id/mainScreenWrapper"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchSubTitle"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2" >

                <LinearLayout
                    android:id="@+id/searchLeftLayout"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/searchTermTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/searchTerm"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/searchEducationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/searchEducation"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/searchBranchTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/spinnerTemplate"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/searchCompanyTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/searchCompany"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/searchPlaceTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/searchPlace"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/searchRightLayout"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/searchTerm"
                        android:layout_width="175dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_view_profile_style"
                        android:inputType="textVisiblePassword"
                        android:textSize="10sp" />

                    <Spinner
                        android:id="@+id/eduSpinner"
                        android:layout_width="175dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_view_profile_style" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Spinner
                            android:id="@+id/placeSpinner"
                            android:layout_width="175dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/text_view_profile_style" />

                        <TextView
                            android:id="@+id/branchTextView"
                            android:layout_width="175dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/text_view_profile_style"
                            android:paddingLeft="5dp"
                            android:paddingTop="7dp"
                            android:textSize="10sp" />
                    </RelativeLayout>

                    <Spinner
                        android:id="@+id/timeSpinner"
                        android:layout_width="175dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_view_profile_style" />

                    <Spinner
                        android:id="@+id/branchSpinner"
                        android:layout_width="175dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_view_profile_style" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/searchAdvanced"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@id/seeMatchesButton"
                android:layout_below="@id/mainScreenWrapper"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:background="@drawable/mid_menu_button"
                android:padding="0dp"
                android:text="@string/searchButton"
                android:textSize="10sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>