<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity" >

    <include
        android:id="@+id/layoutNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/navigation_menu_layout" />

    <LinearLayout
        android:id="@+id/mainScreenWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layoutNavigation"
        android:layout_above="@+id/eduNav"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:weightSum="100" >

        <ScrollView
            android:id="@+id/description_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="40"
            android:background="@drawable/text_view_profile_style"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:gravity="left"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:weightSum="100" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:orientation="vertical"
                    android:paddingRight="2dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="@string/name"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="@string/age"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="@string/sex"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="@string/province"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="@string/city"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="@string/skills"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text="@string/discipline"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="60"
                    android:orientation="vertical"
                    android:paddingLeft="2dp" >

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/profile_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/profile_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/profile_province"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/profile_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/profile_profession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/profile_discipline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="false"
                        android:text=""
                        android:textColor="#000000" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/profile_jobReq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="52.04"
            android:background="@drawable/text_view_profile_style"
            android:fadeScrollbars="false"
            android:gravity="left"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text=""
            android:textColor="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/eduNav"
        android:layout_width="225dp"
        android:layout_height="29dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/mid_menu_button"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/eduNavTo"
        android:textSize="10sp" />

</RelativeLayout>